--- a/components/SelectionTabs/SelectionTabs.module.scss
+++ b/components/SelectionTabs/SelectionTabs.module.scss
@@ -2,8 +2,9 @@
 
 .tabWrapper {
   padding-top: 46px;
-
+  max-width: 100%;
   .tabContainer {
+    max-width: 100%;
     display: flex;
     border-radius: 8px;
     overflow: hidden;
@@ -15,7 +16,7 @@
       border-right: 1px solid $grey;
       transition: 0.2s;
       cursor: pointer;
-      width: 200px;
+      flex: 1;
       text-align: center;
       background-color: white;
     }
@@ -30,7 +31,7 @@
       color: white;
       transition: 0.2s;
       cursor: pointer;
-      width: 200px;
+      flex: 1;
       text-align: center;
     }
     margin: auto;
