--- a/styles/Variables.scss
+++ b/styles/Variables.scss
@@ -5,3 +5,8 @@ $blue: #0b69ff;
 $green: #2dca73;
 $grey: #d7dfe9;
 $darkGrey: #7e858e;
+
+$media-desktop: "only screen and (max-width : 1024px)";
+$media-tablet: "only screen and (max-width : 768px)";
+$media-mobile: "only screen and (max-width : 600px)";
+$media-mobile-sm: "only screen and (max-width : 480px)";
